removed hover on mobile and fixed effects

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
-// .app {
+@import './styles/vars';
 
-// }
+.app {
+  width: 100vw;
+  height: 100vh;
+  background-color: $raisin-black;
+}
