--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: $raisin-black;
+  // background-color: $raisin-black;
 
   &__wrapper {
     display: flex;
