--- a/src/components/Particles/Particles.scss
+++ b/src/components/Particles/Particles.scss
@@ -5,7 +5,7 @@
   width: calc(100vw - 17px);
   height: 100vh;
   overflow: hidden;
-  z-index: -1;
+  // z-index: -1;
 
   &--projects {
     z-index: unset;
